[gd_scene load_steps=52 format=3 uid="uid://5fu7iu5tf7b8"]

[ext_resource type="Script" path="res://Scenes/test_npc.gd" id="1_wcf3a"]
[ext_resource type="Texture2D" uid="uid://x617bqw2ce85" path="res://Sprites/Wall/Wall_UNLOCKED_H.png" id="2_e5c6d"]
[ext_resource type="Shader" path="res://Scenes/Player/color.gdshader" id="3_ds5vo"]
[ext_resource type="Texture2D" uid="uid://64qhkt4xxxt5" path="res://Sprites/Player/FINALPLAYER/player_crouch.png" id="3_w3nwv"]
[ext_resource type="Texture2D" uid="uid://dqal6maomlgb2" path="res://Sprites/Player/player_new22_sheet.png" id="4_ndf63"]
[ext_resource type="Texture2D" uid="uid://c0c1lxr88dd3n" path="res://Sprites/Player/FINALPLAYER/player_fall.png" id="5_ve46c"]
[ext_resource type="Texture2D" uid="uid://bbaas3fcls8yr" path="res://Sprites/Player/FINALPLAYER/player_idle.png" id="6_rt4n3"]
[ext_resource type="Texture2D" uid="uid://b63h3hpgpto1" path="res://Sprites/Player/FINALPLAYER/player_jump.png" id="7_t6m8i"]
[ext_resource type="Texture2D" uid="uid://compx650ycuui" path="res://Sprites/Player/FINALPLAYER/player_run.png" id="8_h2qly"]
[ext_resource type="Texture2D" uid="uid://dfeycgwwn6ov8" path="res://Sprites/Player/FINALPLAYER/player_walk.png" id="9_ylo2i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mg8jh"]
size = Vector2(11, 49)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ncnbu"]
shader = ExtResource("3_ds5vo")
shader_parameter/active = true
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqm6g"]
atlas = ExtResource("3_w3nwv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sirt"]
atlas = ExtResource("3_w3nwv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbjha"]
atlas = ExtResource("3_w3nwv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ux2p"]
atlas = ExtResource("4_ndf63")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k26fe"]
atlas = ExtResource("4_ndf63")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_od440"]
atlas = ExtResource("4_ndf63")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u8gy"]
atlas = ExtResource("4_ndf63")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqipr"]
atlas = ExtResource("4_ndf63")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bu1c"]
atlas = ExtResource("4_ndf63")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6e5e"]
atlas = ExtResource("5_ve46c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv5fa"]
atlas = ExtResource("5_ve46c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba3vk"]
atlas = ExtResource("5_ve46c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fpy0"]
atlas = ExtResource("6_rt4n3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_apihk"]
atlas = ExtResource("6_rt4n3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhya0"]
atlas = ExtResource("6_rt4n3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4skdt"]
atlas = ExtResource("7_t6m8i")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_akm8l"]
atlas = ExtResource("7_t6m8i")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1j21"]
atlas = ExtResource("7_t6m8i")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gknmw"]
atlas = ExtResource("8_h2qly")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kdjx"]
atlas = ExtResource("8_h2qly")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hgld"]
atlas = ExtResource("8_h2qly")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2pde"]
atlas = ExtResource("8_h2qly")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxpnk"]
atlas = ExtResource("8_h2qly")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxfiu"]
atlas = ExtResource("8_h2qly")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_it7eh"]
atlas = ExtResource("8_h2qly")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp534"]
atlas = ExtResource("8_h2qly")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmpyv"]
atlas = ExtResource("9_ylo2i")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpgym"]
atlas = ExtResource("9_ylo2i")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8af0"]
atlas = ExtResource("9_ylo2i")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qdpp"]
atlas = ExtResource("9_ylo2i")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n37jw"]
atlas = ExtResource("9_ylo2i")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w035s"]
atlas = ExtResource("9_ylo2i")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvu70"]
atlas = ExtResource("9_ylo2i")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_td6in"]
atlas = ExtResource("9_ylo2i")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3qgg5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqm6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sirt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbjha")
}],
"loop": false,
"name": &"crouch",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ux2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k26fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od440")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u8gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqipr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bu1c")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6e5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv5fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba3vk")
}],
"loop": false,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fpy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apihk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhya0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apihk")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4skdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akm8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1j21")
}],
"loop": false,
"name": &"jump",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gknmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kdjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hgld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2pde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxpnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxfiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it7eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp534")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmpyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpgym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8af0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qdpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n37jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w035s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvu70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td6in")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8ab5"]
size = Vector2(18, 49)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6somv"]
radius = 64.0
height = 138.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mn7bm"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_cikai"]
radius = 146.0

[node name="NavChar" type="CharacterBody2D" groups=["enemies"]]
position = Vector2(256, 616)
collision_layer = 257
collision_mask = 257
script = ExtResource("1_wcf3a")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 40.0
path_postprocessing = 1
avoidance_enabled = true
radius = 50.0
max_speed = 300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_mg8jh")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5.72205e-06, 1.52588e-05)
scale = Vector2(0.25, 2)
texture = ExtResource("2_e5c6d")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ncnbu")
position = Vector2(0, 1)
scale = Vector2(0.8, 0.9)
sprite_frames = SubResource("SpriteFrames_3qgg5")
animation = &"fall"
autoplay = "walk"

[node name="LedgeCheck" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LedgeCheck"]
position = Vector2(32, 31.5)
shape = SubResource("RectangleShape2D_u8ab5")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(40, 0)

[node name="SurroundCheck" type="Area2D" parent="." groups=["enemies"]]
visible = false
collision_layer = 128
collision_mask = 128
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SurroundCheck"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6somv")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_mn7bm")

[node name="FallTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShotgunCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShotgunCheck"]
shape = SubResource("CircleShape2D_cikai")

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_path_changed"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_exited" from="LedgeCheck" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="SurroundCheck" to="." method="_on_surround_check_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FallTimer" to="." method="_on_fall_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="ShotgunCheck" to="." method="_on_shotgun_check_body_entered"]
